Add method to test if package exported